<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="16dp"
    android:padding="32dp">

    <!-- Material Calendar -->
    <com.prolificinteractive.materialcalendarview.MaterialCalendarView
        android:id="@+id/calendarView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:mcv_showOtherDates="all"
        app:mcv_selectionColor="@color/purple_200"
        app:mcv_headerTextAppearance="@style/CalendarMonthTitleTextAppearance"
        app:mcv_weekDayTextAppearance="@style/CalendarWeekDayTextAppearance"
        app:mcv_dateTextAppearance="@style/CalendarDateTextAppearance"
        app:mcv_arrowColor="?attr/colorOnPrimary"
        />


    <!-- Divider -->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        android:layout_marginVertical="8dp" />

    <TextView
        android:id="@+id/emptyTaskMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/empty_task_calendar"
        android:gravity="center"
        android:visibility="gone"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="16sp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="4dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/taskRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingBottom="56dp"
        android:scrollbars="none"
        android:clipToPadding="false"/>
</LinearLayout>
